# email-newsletter-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json
.github/workflows/: audit-on-push.yaml  general.yaml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20220606155033_create_subscriptions_table.sql  20220613151716_make_status_not_null_in_subscriptions.sql  20220614134717_create_subscription_tokens_table.sql  20220621161320_remove_salt_from_users.sql  20220629151703_create_idempotency_table.sql  20220701162343_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh  z2p_do_test.sh
src/: authentication.rs  configruation.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
