[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1", features = ["derive"]}
reqwest = "0.11.10"
config = "0.11"
chrono = "0.4.19"
uuid = { version = "0.8.1", features = ["v4"]}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.5"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "3"
unicode-segmentation = "1"
validator = "0.15.0" #to validate emails

[dev-dependencies]
once_cell = "1"
claim = "0.5" #claim provides more informative error messages
fake = "~2.3" #fake provides generation logic for both primitives and higher-level objs like IPs & emails
quickcheck = "0.9.2" #conducts property based testing using randomly generated input
quickcheck_macros = "0.9.1"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate",
"offline"
]
