[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1", features = ["derive"]}
config = "0.11"
chrono = "0.4.19"
uuid = { version = "0.8.1", features = ["v4"]}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.5"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "3"
unicode-segmentation = "1"
validator = "0.15.0" #to validate emails
rand = { version = "0.8", features=["std_rng"] } #randomly generate subscription tokens for sub confirmation
thiserror = "1"
anyhow = "1"
base64 = "0.13" #base64 encoding for credential validation
argon2 = { version = "0.3", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3"

[dev-dependencies]
once_cell = "1"
claim = "0.5" #claim provides more informative error messages
fake = "~2.3" #fake provides generation logic for both primitives and higher-level objs like IPs & emails
quickcheck = "0.9.2" #conducts property based testing using randomly generated input
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5" #HTTP server mock that can intercept and respond to HTTP requests
serde_json = "1"
linkify = "0.8" #linkify scans text and returns an iterator of extracted links

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate",
"offline"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]